oxiplate-derive/tests/config/crates/double-assign/tests/broken/double-assign.stderr
error: Failed to parse `/oxiplate.toml`: `fallback_escaper_group` is already set
 --> tests/broken/double-assign.rs:3:10
  |
3 | #[derive(Oxiplate)]
  |          ^^^^^^^^
  |
  = note: this error originates in the derive macro `Oxiplate` (in Nightly builds, run with -Z macro-backtrace for more info)
